# ichthus_launcher

./: CMakeLists.txt  README.md  package.xml  push_wo_pmap.sh
cfg/: road_graph.yaml  task_graph.yaml  task_graph_kcity_simu.yaml
include/ichthus_launcher/: ichthus_launcher.h  pipe_open.h
launch/: autoware_connector__pose_relay.launch  autoware_connector__vel_relay.launch  fix2gnsspose__fix2gnsspose_kcity.launch  gnss_localizer__nmea2tfpose.launch  ichthus_launcher.launch  map_file__points_map_loader_kcity.launch  map_file__vector_map_loader_kcity.launch  op_global_planner__op_global_planner.launch  op_global_planner__op_global_planner_play.launch  op_local_planner__op_behavior_selector.launch  op_local_planner__op_common_params.launch  op_local_planner__op_trajectory_evaluator.launch  op_local_planner__op_trajectory_generator.launch  pure_pursuit__pure_pursuit.launch  tf__base_link_to_localizer.launch  tf__map_to_mobility_kcity.launch  tf__world_to_map_kcity.launch  twist_filter__twist_filter.launch  twist_filter__twist_gate.launch  vehicle_description__joint_state_publisher.launch  vehicle_description__robot_state_publisher.launch  wf_simulator__wf_simulator.launch
scripts/: clear_rosparams.sh  fix2gnsspose_soongsil_campus.launch  init_rosparams.sh  publish_to_goalpose.sh  publish_to_initialpose.sh  publish_to_stat.sh  rosbag_play_service.sh
src/: ichthus_launcher_core.cpp  ichthus_launcher_node.cpp
